# llm-cost-saving

./: .gitignore  CHANGELOG.md  README.md  broker.toml  pyproject.toml
.github/workflows/: ci.yml
assets/: gen_demo.py
broker/: __init__.py  __main__.py  cli.py  config.py  cost.py  dashboard.py  evidence.py  quota.py  router.py  runner.py  runtime.py  skills.py  state.py  trace.py  usage.py
docs/: provider-intelligence.md
experiment_results/: local_usage_audit_2026-07-22.json  outcome_equivalence_reruns.json
experiments/: outcome_equivalence_reruns.py
tests/: test_broker.py  test_cli_and_edges.py  test_cli_config.py  test_cost.py  test_dashboard.py  test_evidence.py  test_quota.py  test_runtime.py  test_trace.py  test_usage.py
