[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modelbroker"
version = "0.1.0"
description = "Quota-aware multi-model router: route each task to the strongest model, fail over when one runs out of quota, resume when it frees up."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ying Chen" }]
keywords = ["llm", "multi-model", "router", "quota", "failover", "claude-code", "codex", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.scripts]
broker = "broker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[tool.setuptools]
packages = ["broker"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
